<resources>
    <string name="app_name">StudentManager</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report">Raport</string>
    <string name="students">Studenci</string>
    <string name="courses">Kursy</string>
    <string name="welcome">Witaj!</string>
    <string name="delete">Usuń</string>
    <string name="edit">E</string>
    <string name="sampleCourse">Informatyka sem. 3 IIIF</string>
    <string name="sampleName">Ryszard Wielkowiejski</string>
    <string name="plusButton">plusButton</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="group">Kurs</string>
    <string name="grade">Ocena</string>
    <string name="add">Dodaj</string>
    <string name="editStudent">Edytuj</string>
    <string name="g">G</string>
    <string name="s">S</string>
    <string name="course_name">Nazwa kursu</string>
    <string name="sample_note">Przykładowa notatka o kursie</string>
    <string name="course_students">Uczestnicy kursu:</string>
    <string name="menu_edit">Edytuj</string>
    <string name="menu_remove">Usuń</string>
    <string name="note">Notatka</string>
    <string name="name">Name</string>
    <string name="student_courses">Kursy:</string>
    <string name="grades">Oceny:</string>
    <string name="accept">Akceptuj</string>
    <string name="date">Data</string>
    <string name="grade_add">Dodaj ocenę</string>
    <string name="add_to_course">Dodaj do kursu</string>

    <string name="warning_input_incorrect">Nie wszystkie pola są poprawne!</string>
    <string name="warning_course_empty">Przed dodaniem oceny utwórz dowolny kurs.</string>
    <string name="toast_succes">Sukces!</string>
    <string name="rapport">Raport</string>
    <string name="grades_today">Oceny z dnia:</string>
    <string name="remove">REMOVE</string>

    <string name="label_welcome">Menu</string>
    <string name="label_studentList">Lista studentów</string>
    <string name="label_courseList">Lista kursów</string>
    <string name="label_raport">Raport</string>

    <string name="label_student">Student</string>
    <string name="label_course">Kurs</string>
    <string name="label_add">Dodaj</string>
    <string name="label_edit">Edytuj</string>
    <string name="label_addToCourse">Dodaj do kursu</string>

    <string name="alert_are_you_sure">Jesteś pewien, że chcesz usunąć ten obiekt? Operacja jest nieodwracalna.</string>
    <string name="alert_are_you_sure_title">Usunąć obiekt?</string>
    <string name="alert_yes">Tak</string>
    <string name="alert_no">Nie</string>
</resources>