<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.OneStudentFragment">

    <TextView
        android:id="@+id/tvStudentName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="10dp"
        android:textSize="21sp"
        android:textColor="@color/black"
        android:text="@string/sampleCourse" />

    <TextView
        android:id="@+id/tvStudentNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:textSize="19sp"
        android:text="@string/sample_note" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:textSize="17sp"
        android:text="@string/student_courses" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCourses"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textSize="17sp"
        android:text="@string/grades" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGrades"
        android:layout_marginHorizontal="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>