<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".view.WelcomeFragment">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/welcome"/>

    <Button
        android:id="@+id/buttonCourses"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/green_light"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:letterSpacing="0.3"
        android:text="@string/courses" />

    <Button
        android:id="@+id/buttonStudents"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/green_light"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:letterSpacing="0.3"
        android:text="@string/students" />

    <Button
        android:id="@+id/buttonReport"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/green_light"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:letterSpacing="0.3"
        android:text="@string/report" />

</LinearLayout>